@@ -3,6 +3,7 @@ HEAD
 ====
 - RAWNAT: IPv6 variants erroneously rejected masks /33-/128
 - new target xt_CHECKSUM
+- xt_length2: add support for IPv6 jumbograms
 
 
 Xtables-addons 1.27 (May 16 2010)
